package edu.uees.patrones.factory;

public interface Notificador {

    void enviar(String destinatario, String mensaje);

}